# gzdoominstancer

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
include/: guiconf.h
src/: main.cxx
